= PDF::Writer Change Log

== PDF::Writer 1.3.0: August 16, 2013
* Ruby 2.0 compatibility.
    o ImageInfo fixes encoding issue
    o Writer fixes enumeration of String
    o Fixed computation of font-width calculations
    
== PDF::Writer 1.2.1: May 13, 2009
* Ruby 1.9 compatibility.

== PDF::Writer 1.1.3: September 9, 2005
* Fixed #2356 submitted by Matthew Thill. Margins set by the various margins
  methods would behave incorrectly.

== PDF::Writer 1.1.2: August 25, 2005
* Thomas Gantner <thomas.gantner@gmx.net> found a problem with the
  interpretation of the placement of page numbers and provided a patch.
  Thanks!
* Thomas also reported a problem with an inability to place page numbering on
  the first page of a document, as well as strange results from not providing
  a starting page number. This has been fixed. Also reported as #2204.
* Modified PDF::Writer requirements to require color-tools version 1.3.0 or
  later. This necessitates that Color constants be changed to Color::RGB
  constants.
* Updated supporting library documentation to include information on
   color-tools version 1.3.
* Fixed a bug with Graphics#transform_matrix truncating one of the transform
  parameters.
* Applied a fix to PDF::SimpleTable submitted by Mike Leddy in #2129 on the
  RubyForge tracker.
* Applied a partial fix for PNG with index-transparency provided by Marc
  Vleugels in #2245 on the RubyForge tracker. NOTE: This does not solve the
  transparency problem; at this point, PDF::Writer cannot be said to support
  PNGs with transparency. This will be fixed in a later version of
  PDF::Writer.

== PDF::Writer 1.1.1: July 1, 2005
* Fixed the packaging process; the .tar.gz files will no longer corrupt the
  images.
* Added the images and the manual (both raw and generated) to the demo
  package.

== PDF::Writer 1.1.0: June 29, 2005
  NOTE: The first two changes are INCOMPATIBLE with previous versions of