@@ -1,5 +1,14 @@
 = PDF::Writer Change Log
 
+== PDF::Writer 1.3.1: November 26, 2013
+* More Ruby 2.0 compatibility:
+    o Changed encodings from ISO-8859-1 to ASCII-8BIT for binary strings.
+    o Fixed problems in ImageInfo with binary strings.
+    o Fixed problem using add_text with embedded links when not using encryption.
+    o Changed Mutex marshalling monkeypatch to actually dump and return a new mutex.
+	  This is required for Transaction::Simple support, which is used in SimpleTable.
+    o Added some tests.
+
 == PDF::Writer 1.3.0: August 16, 2013
 * Ruby 2.0 compatibility.
     o ImageInfo fixes encoding issue
